# AuraVerify

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/agent/: __init__.py  repo_reader.py  stack_detector.py
backend/tests/: conftest.py  test_integration.py  test_repo_reader.py  test_stack_detector.py
