[project]
name = "auraverify-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "gunavathibaskaran170",email = "gunavathibaskaran170@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.138.2,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "anthropic (>=0.113.0,<0.114.0)",
    "langgraph (>=1.2.7,<2.0.0)",
    "langchain-anthropic (>=1.4.8,<2.0.0)",
    "e2b (>=2.30.0,<3.0.0)",
    "pygithub (>=2.9.1,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "authlib (>=1.7.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "supabase (>=2.31.0,<3.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ruff (>=0.15.20,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
